# dwmipcpp

./: .gitignore  CMakeLists.txt  CNAME  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  build.sh  classdwmipc_1_1Connection-members.html  classdwmipc_1_1Connection.html  classdwmipc_1_1Connection.js  classdwmipc_1_1EOFError.html  classdwmipc_1_1EOFError.js  classdwmipc_1_1ErrnoError.html  classdwmipc_1_1Event-members.html  classdwmipc_1_1Event.html  classdwmipc_1_1Event.js  classdwmipc_1_1HeaderError-members.html  classdwmipc_1_1HeaderError.html  classdwmipc_1_1HeaderError.js  classdwmipc_1_1IPCError.html  classdwmipc_1_1InvalidOperationError-members.html  classdwmipc_1_1InvalidOperationError.html  classdwmipc_1_1InvalidOperationError.js  classdwmipc_1_1NoMsgError-members.html  classdwmipc_1_1NoMsgError.html  classdwmipc_1_1Packet.html  classdwmipc_1_1Packet.js  classdwmipc_1_1ReplyError-members.html  classdwmipc_1_1ReplyError.html  classdwmipc_1_1ReplyError.js  classdwmipc_1_1ResultFailureError-members.html  classdwmipc_1_1ResultFailureError.html  classdwmipc_1_1SocketClosedError-members.html  classdwmipc_1_1SocketClosedError.html  classdwmipc_1_1SocketClosedError.js  classes.html  connection_8cpp.html  connection_8hpp.html  (+106 more)
.github/workflows/: main.yaml
docs/: annotated.html  classdwmipc_1_1Connection-members.html  classdwmipc_1_1Connection.html  classdwmipc_1_1Connection.js  classdwmipc_1_1EOFError-members.html  classdwmipc_1_1EOFError.html  classdwmipc_1_1ErrnoError-members.html  classdwmipc_1_1ErrnoError.html  classdwmipc_1_1ErrnoError.js  classdwmipc_1_1IPCError.html  classdwmipc_1_1NoMsgError.js  classdwmipc_1_1Packet-members.html  classdwmipc_1_1ReplyError.html  classdwmipc_1_1ResultFailureError.js  connection_8cpp.html  connection_8hpp.html  connection_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d28a4824dc47e487b107a5db32ef43c4.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dump__all_8cpp.html  errors_8cpp.html  errors_8hpp.html  errors_8hpp_source.html  files.html  files_dup.js  functions_vars.html  globals_defs.html  hierarchy.html  hierarchy.js  index.html  menudata.js  namespacedwmipc.html  namespacedwmipc.js  namespacemembers.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  (+24 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  (+21 more)
examples/: CMakeLists.txt  dump_all.cpp  run_command.cpp  subscribe.cpp
include/: connection.hpp  errors.hpp  packet.hpp  types.hpp  util.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  (+56 more)
src/: connection.cpp  errors.cpp  packet.cpp  types.cpp  util.cpp
(+5 files in other folders)
